--- a/content/privacy.html
+++ b/content/privacy.html
@@ -4,11 +4,12 @@
     <h2>Privacy Policy</h2>
     <p>
         Privacy is something I personally find critical. This site collects no
-        personal data beyond what you explicitly provide. More information on
-        this will be coming.
+        personal data beyond what you explicitly provide. No personal data is
+        recorded - when logging in with Google only a hash of your email is
+        stored.
     </p>
     <p>
-        This site uses YouTube APIs so by using this site you must agree to
+        This site uses YouTube iFrame API so by using this site you must agree to
         <a href='https://www.youtube.com/t/terms'>YouTube's Terms of Service</a>.
     </p>
     <p>
